--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "egeloen/google-map",
+    "name": "cuborubo/google-map",
     "description": "Google Map API v3 integration for PHP 5.6+",
     "keywords": [ "google", "map" ],
     "license": "MIT",
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "egeloen/json-builder": "^2.0|^3.0",
+        "cuborubo/json-builder": "^2.0|^3.0",
         "symfony/event-dispatcher": "^2.7|^3.0"
     },
     "require-dev": {
