--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "cuborubo/json-builder": "^2.0|^3.0",
+        "cuborubo/json-builder": "dev-master",
         "symfony/event-dispatcher": "^2.7|^3.0"
     },
     "require-dev": {
